# naru

./: .editorconfig  Cargo.toml  Makefile  license.txt  readme.md  test-input.txt
src/: c_str.rs  config.rs  main.rs  selector.rs  tty.rs
