[package]
name = "toss"
version = "0.2.0"
authors = ["James Pike <github@chilon.net>"]
description = "A selector like fzu and fzy"
repository = "https://github.com/ohjames/toss"
license = "MIT"

[dependencies]
libc = "~0.2"
termios = "~0.3.1"
toml = "~0.5.5"
serde = { version = "^1.0.102", features = ["derive"] }
xdg = "^2.1"

[[bin]]
name = "toss"
