[package]
edition = "2018"
name = "naru"
version = "0.4.0"
authors = ["James Pike <github@chilon.net>"]
description = "A selector like fzu and fzy"
repository = "https://github.com/ohjames/naru"
license = "MIT"

[dependencies]
libc = "~0.2"
termios = "~0.3.1"
toml = "~0.5.5"
serde = { version = "^1.0.102", features = ["derive"] }
xdg = "^2.1"
sublime_fuzzy = "^0.6"

[[bin]]
name = "naru"
